# PhiPsi

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  phipsi_filesystem_manual.md  phipsi_keywords_manual.md
examples/: 2d_L_shaped_specimen.kpp  2d_L_shaped_specimen_mesh2.kpp  2d_L_shaped_specimen_mesh3.kpp  2d_T_Shaped_Crack.kpp  2d_fem.kpp  2d_fem_MSYS2.kpp  2d_hydraulic_fracturing.kpp  2d_hydraulic_fracturing_mesh1.kpp  2d_hydraulic_fracturing_mesh2.kpp  2d_multiple_cracks.kpp  2d_plate_with_holes.kpp  2d_uniaxial_compression_of_inclined_crack.kpp  2d_uniaxial_tension_of_inclined_crack.kpp  2d_uniaxial_tension_of_inclined_crack_scalability.kpp  2d_user_defined_crack_path.kpp  2d_xfem.kpp  2d_xfem_MSYS2.kpp  2d_xfem_hydraulic_fracturing.kpp  3d_L_shaped_specimen.kpp  3d_cylinder_uniaxial_tension.kpp  3d_hf_toughness_dominated.kpp  3d_hf_two_wells_large_scale.kpp  3d_multi-fracture_hf_nf_two_stages.kpp  3d_plate_with_holes.kpp  3d_xfem_block_tension.kpp  3d_xfem_hydraulic_fracturing.kpp
examples/2d_L_shaped_specimen/: 2d_L_shaped_specimen.apdl  2d_L_shaped_specimen.boux  2d_L_shaped_specimen.elem  2d_L_shaped_specimen.focy  2d_L_shaped_specimen.node
examples/2d_L_shaped_specimen_mesh2/: 2d_L_shaped_specimen.apdl  2d_L_shaped_specimen.boux  2d_L_shaped_specimen.elem  2d_L_shaped_specimen.focy  2d_L_shaped_specimen.node
examples/2d_L_shaped_specimen_mesh3/: 2d_L_shaped_specimen.apdl  2d_L_shaped_specimen.boux  2d_L_shaped_specimen.elem  2d_L_shaped_specimen.focy  2d_L_shaped_specimen.node
examples/2d_T_Shaped_Crack/: ANSYS_T_Shaped_Crack.apdl  T_Shaped_Crack.apdl  T_Shaped_Crack.boux  T_Shaped_Crack.elem  T_Shaped_Crack.focy  T_Shaped_Crack.node
examples/2d_fem/: fem_2d.apdl  fem_2d.bouy  fem_2d.elem  fem_2d.focy  fem_2d.node
examples/2d_hydraulic_fracturing/: 2d_hydraulic_fracturing.apdl  2d_hydraulic_fracturing.boux  2d_hydraulic_fracturing.elem  2d_hydraulic_fracturing.node  KGD_Time_Viscosity_Dominated.m  PhiPsi_2D_Post_1.m
examples/2d_multiple_cracks/: 2d_multiple_cracks.apdl  (+4 more)
(+954 files in other folders)
